# typerdantic

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: index.md
docs/guides/: config-driven-menus.md  creating-menus.md  getting-started.md  styling-guide.md  using-actions.md
examples/: __init__.py  dynamic_task_runner.py  file_explorer.py  project_wizard.py
examples/resources/: tasks.json
src/docs/: typerdantic styling guide.md
src/typerdantic/: __init__.py  actions.py  app.py  base.py  component.py  config_models.py  executors.py  loaders.py  models.py  registry.py  styles.py
tests/: __init__.py  __main__.py  run_all_tests.py  test_actions_with_args.py  test_app.py  test_components.py  test_config_actions.py  test_interactive_explorer.py  test_internal_actions.py  test_loaders.py  test_menu.py  test_styles.py
tests/tests/: test_runtime_args.py
