[project]
name = "typerdantic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Will Morris", email = "willmorris103@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]
