[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typerdantic"
version = "1.0.3"
authors = [
  { name="Will Morris", email="willmorris103@gmail.com" },
]
description = "A library for creating declarative, interactive CLI menus with Pydantic and prompt-toolkit."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "prompt-toolkit>=3.0",
    "tomli; python_version < '3.11'",
    "click>=8.1.8",
]

[project.urls]
"Homepage" = "https://github.com/Willmo103/typerdantic"
"Bug Tracker" = "https://github.com/Willmo103/typerdantic/issues"

[dependency-groups]
dev = [
    "black>=24.8.0",
]




